# proj_style

./: .gitignore  mynotes.md
MyBackProjected/: CMakeLists.txt  FileZ.cpp  FileZ.h  main.cpp  model.cpp  model.h  params_our_car.cfg  readbmp.cpp  readbmp.h
MyBackProjected/test/: BitmapIO_0.cpp  BitmapIO_0.h  BitmapIO_1.cpp  testReadFiles.cpp  testReadFiles.h  test_bmp_io.cpp
MyConvolutional/: CMakeLists.txt  CMakeLists.txt.dezavou  Dockerfile.dezavou  Dockerfile.remote-cpp-env  main.cpp  main.cpp.dockerhost  params.cfg  params_their_building.cfg  test_reader.cpp  test_reader.h
MySampleAndHog/: CMakeLists.txt  CommonZ.h  FileZ.cpp  FileZ.h  install_opencv2_laptop.sh  main.cpp  model.cpp  model.h  opencv2_env.sh  params_demo.cfg  params_their_building.cfg  readbmp.cpp  readbmp.h
MySampleAndHog/test_src/: TestMe.cpp  TestReadBmp.cpp  TestReadPpm.cpp
preprocess_buildings/: Marios.py  MultiCamerasRender.py  PreprocessObjFile.py  annfassbuildingObjToPly.py  buildnetObjToColouredPly.py  buildnetObjToPly.py  fileprocessing.py  remove_materials.sh
python_preprocessing/: MultiCamerasRender.py  Ppm2Bmp.py  annfassbuildingObjToPly.py  buildnetObjToPly.py  run_rendering.sh
